--- a/article/art_pub.html
+++ b/article/art_pub.html
@@ -106,7 +106,7 @@
   <script src="/assets/lib/jquery.js"></script>
   <script src="/assets/js/baseAPI.js"></script>
   <script src="/assets/lib/template-web.js"></script>
-  <!-- 富文本 -->
+  <!-- 副文本 -->
   <script src="/assets/lib/tinymce/tinymce.min.js"></script>
   <script src="/assets/lib/tinymce/tinymce_setup.js"></script>
   <script src="/assets/lib/cropper/Cropper.js"></script>
